# unifi-monitor

./: .dockerignore  .env.example  .gitignore  .pre-commit-config.yaml  404.html  CHANGELOG.md  CLAUDE.md  CONTRIBUTING.md  Dockerfile  LICENSE  Makefile  README.md  ROADMAP.md  SECURITY.md  docker-compose.yml  index.html  mkdocs.yml  pyproject.toml  sitemap.xml
.github/workflows/: ci.yml  docs.yml  test.yml
alerts/: index.html
api-reference/: index.html
architecture/: index.html
configuration/: index.html
deployment/: index.html
docs/: alerts.md  api-reference.md  architecture.md  configuration.md  deployment.md  index.md  netflow.md
netflow/: index.html
search/: search_index.json
src/unifi_monitor/: README.md  __init__.py  __main__.py  alerts.py  app.py  config.py  db.py  poller.py  unifi_client.py  ws.py
src/unifi_monitor/api/: README.md  routes.py
src/unifi_monitor/netflow/: README.md  collector.py  parser.py
src/unifi_monitor/static/: README.md  index.html
src/unifi_monitor/static/css/: style.css
src/unifi_monitor/static/js/: dashboard.js
tests/: README.md  conftest.py  test_alerts.py  test_api.py  test_db.py  test_export.py  test_integration.py  test_parser.py  test_poller.py  test_ws.py
