[build-system]
requires = ["setuptools>=68.0"]
build-backend = "setuptools.build_meta"

[project]
name = "unifi-monitor"
version = "0.1.0"
description = "Real-time network monitoring dashboard for UniFi networks with NetFlow/IPFIX visualization"
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.10"
dependencies = [
    "fastapi>=0.104",
    "uvicorn[standard]>=0.24",
    "requests>=2.31",
    "urllib3>=2.0",
    "netflow>=0.12",
    "jinja2>=3.1",
    "python-dotenv>=1.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "httpx>=0.25",
]

[project.scripts]
unifi-monitor = "unifi_monitor.app:main"

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
