[build-system]
requires = ["setuptools>=68.0"]
build-backend = "setuptools.build_meta"

[project]
name = "unifi-monitor"
version = "0.3.0"
description = "Real-time network monitoring dashboard for UniFi networks with NetFlow/IPFIX visualization"
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.10"
authors = [{name = "Matt Bloise"}]
keywords = ["unifi", "monitoring", "dashboard", "netflow", "ipfix", "network"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: System :: Monitoring",
    "Topic :: System :: Networking :: Monitoring",
]
dependencies = [
    "fastapi>=0.104",
    "uvicorn[standard]>=0.24",
    "requests>=2.31",
    "urllib3>=2.0",
    "python-dotenv>=1.0",
    "httpx>=0.25",
]

[project.urls]
Homepage = "https://github.com/Matt-Bloise/unifi-monitor"
Repository = "https://github.com/Matt-Bloise/unifi-monitor"
Issues = "https://github.com/Matt-Bloise/unifi-monitor/issues"
Changelog = "https://github.com/Matt-Bloise/unifi-monitor/blob/master/CHANGELOG.md"

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.24",
    "ruff>=0.8",
]
netflow = [
    "netflow>=0.12",
]

[project.scripts]
unifi-monitor = "unifi_monitor.app:main"

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
unifi_monitor = ["static/**/*"]

[tool.pytest.ini_options]
testpaths = ["tests"]

[tool.ruff]
target-version = "py310"
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "W", "I", "UP", "B", "SIM"]

[tool.ruff.lint.per-file-ignores]
"src/unifi_monitor/api/routes.py" = ["B008"]  # Depends() in defaults is standard FastAPI
