[build-system]
requires = ["setuptools>=68.0"]
build-backend = "setuptools.build_meta"

[project]
name = "unifi-monitor"
version = "0.4.0"
description = "Real-time network monitoring dashboard for UniFi networks with NetFlow/IPFIX visualization"
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.10"
authors = [{name = "Matt Bloise"}]
keywords = ["unifi", "monitoring", "dashboard", "netflow", "ipfix", "network"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: System :: Monitoring",
    "Topic :: System :: Networking :: Monitoring",
]
dependencies = [
    "fastapi>=0.104,<1",
    "uvicorn[standard]>=0.24,<1",
    "requests>=2.31,<3",
    "urllib3>=2.0,<3",
    "python-dotenv>=1.0,<2",
    "httpx>=0.25,<1",
]

[project.urls]
Homepage = "https://github.com/Matt-Bloise/unifi-monitor"
Repository = "https://github.com/Matt-Bloise/unifi-monitor"
Issues = "https://github.com/Matt-Bloise/unifi-monitor/issues"
Changelog = "https://github.com/Matt-Bloise/unifi-monitor/blob/master/CHANGELOG.md"
Documentation = "https://matt-bloise.github.io/unifi-monitor/"

[project.optional-dependencies]
dev = [
    "pytest>=8.0,<9",
    "pytest-asyncio>=0.24,<1",
    "pytest-cov>=6.0,<7",
    "ruff>=0.8,<1",
]
netflow = [
    "netflow>=0.12,<1",
]
docs = [
    "mkdocs-material>=9.0,<10",
]

[project.scripts]
unifi-monitor = "unifi_monitor.app:main"

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
unifi_monitor = ["static/**/*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "--cov=unifi_monitor --cov-report=term-missing --no-cov-on-fail"

[tool.coverage.run]
source = ["unifi_monitor"]
omit = ["*/static/*"]

[tool.coverage.report]
show_missing = true
skip_empty = true
exclude_lines = [
    "pragma: no cover",
    "if __name__ == .__main__.",
    "if TYPE_CHECKING:",
]

[tool.ruff]
target-version = "py310"
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "W", "I", "UP", "B", "SIM"]

[tool.ruff.lint.per-file-ignores]
"src/unifi_monitor/api/routes.py" = ["B008"]  # Depends() in defaults is standard FastAPI
